Fix css, align button text to center

--- a/client/src/styles/BookingPage.scss
+++ b/client/src/styles/BookingPage.scss
@@ -449,6 +449,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+	text-align: center;
     gap: 20px;
 
     .black-button {
